Remove dark mode toggle functionality

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="stylesheets/syntax-highlighting.css">
   <link rel="stylesheet" href="stylesheets/responsive.css">
   <link rel="stylesheet" href="stylesheets/mobile.css">
-  <link rel="stylesheet" href="stylesheets/dark-mode.css">
   <link rel="stylesheet" href="stylesheets/version-selector.css">
   <style>
     :root {
@@ -249,8 +248,7 @@
   <main>
     <div class="sidebar">
       <div style="text-align: center; margin-bottom: 20px;">
-        <img src="images/logo-black.png" alt="Flash" class="logo-light" style="max-width: 120px; margin-bottom: 10px; display: block;">
-        <img src="images/logo-white.png" alt="Flash" class="logo-dark" style="max-width: 120px; margin-bottom: 10px; display: none;">
+        <img src="images/logo-black.png" alt="Flash" style="max-width: 120px; margin-bottom: 10px; display: block;">
       </div>
       <h2>Quick Links</h2>
       <ul>
@@ -481,8 +479,6 @@ class AbsoluteZeroReasoner {
   <script src="js/syntax-highlighter.js"></script>
   <script src="js/code-examples.js"></script>
   <script src="js/mobile.js"></script>
-  <script src="js/js/theme-switcher.js"></script>
-  <script src="js/theme-switcher.js"></script>
   <script src="js/version-manager.js"></script>
   <script src="js/version-router.js"></script>
   <script src="js/version-comparison.js"></script>
