Change color scheme from blue to black

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="stylesheets/version-selector.css">
   <style>
     :root {
-      --color-primary: #1655c0;
+      --color-primary: #000000;
       --color-secondary: #161313;
     }
     
@@ -171,7 +171,7 @@
     }
 
     .button:hover {
-      background-color: #13459f;
+      background-color: #333333;
     }
 
     .steps {
